--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,22 @@
-$font-1:'Roboto';
-$font-2:'poppins';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: 'Segoe-UI';
+    src: url('../fonts/Segoe-UI.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Squartiqa 4F';
+    src: url('../fonts/Squartiqa4FLight.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+$font-1: 'Segoe-UI';
+$font-2:"Poppins", sans-serif;
+$font-3:'Squartiqa 4F';
+$font-4:"Inter", sans-serif;
 $white:#fff;
 $black:#000;
 $primary: #D3A034;
@@ -8,3 +25,4 @@ $text:#EBEDF0;
 $heading: $black;
 $border:#4B4B4B;
 $bg:#FFFAEF;
+$_404652: #404652;
