--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,4 +5,6 @@
 @import '../scss/base';
 @import '../scss/component';
 @import '../scss/header';
+@import '../scss/about';
+@import '../scss/tokenomics';
 @import '../scss/footer';
