--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,13 +14,15 @@
 }
 
 $font-1: 'Segoe-UI';
-$font-2:"Poppins", sans-serif;
+$font-2:"Poppins",
+sans-serif;
 $font-3:'Squartiqa 4F';
-$font-4:"Inter", sans-serif;
+$font-4:"Inter",
+sans-serif;
 $white:#fff;
 $black:#000;
-$primary: #D3A034;
-$secondary: #EEE578;
+$primary: #E5CF63;
+$secondary: #D3A034;
 $text:#EBEDF0;
 $heading: $black;
 $border:#4B4B4B;
