--- a/src/assets/scss/_component.scss
+++ b/src/assets/scss/_component.scss
@@ -1,12 +1,6 @@
-.mb {
-    &-12 {
-        margin-bottom: 12px !important;
-    }
-}
-
-.mt {
-    &-12 {
-        margin-top: 12px !important;
+.ff {
+    &-1 {
+        font-family: $font-1 !important;
     }
 }
 
