--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -203,6 +203,11 @@
     }
 }
 
+@mixin font-32 {
+    font-size: 32px;
+    line-height: 130%;
+}
+
 @mixin font-28 {
     font-size: 28px;
     line-height: 140%;
@@ -216,6 +221,7 @@
         font-size: 22px;
     }
 }
+
 @mixin font-26 {
     font-size: 26px;
     line-height: 140%;
@@ -229,6 +235,7 @@
         font-size: 20px;
     }
 }
+
 @mixin font-24 {
     font-size: 24px;
     line-height: 1.5;
@@ -253,7 +260,6 @@
         font-size: 18px;
     }
 }
-
 
 @mixin font-20 {
     font-size: 20px;
