--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,8 @@
 @import '../scss/base';
 @import '../scss/component';
 @import '../scss/header';
+@import '../scss/banner';
+@import '../scss/banner';
 @import '../scss/about';
 @import '../scss/tokenomics';
 @import '../scss/footer';
