--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -1,70 +1,115 @@
-.about{
+.about {
     padding-top: 190px;
-    border-bottom:27px solid #E5CF63;
+    border-bottom: 27px solid #E5CF63;
     position: relative;
     z-index: 1;
-    &:before{
+    &:before {
         position: absolute;
         content: "";
         top: 35%;
         left: 50%;
         width: 125px;
-        height: 498.572px;
+        height: 498px;
         transform: rotate(32.129deg);
-        border-radius: 498.572px;
-        background: #E5CF63;
+        border-radius: 498px;
+        background-color: #E5CF63;
         filter: blur(125px);
         z-index: -1;
-        @include sm{
+        @include sm {
             height: 220px;
             width: 80px;
         }
     }
-    .section-title{
+    .section-title {
         padding-bottom: 90px;
-        @include lg{
+        @include lg {
             padding-bottom: 50px;
         }
-        @include mmd{
+        @include mmd {
             padding-bottom: 30px;
         }
-        p{
+        p {
             padding-left: 104px;
             @include font-22;
             color: $black;
             font-weight: 400;
             line-height: 140%;
-            @include lg{
+            @include lg {
                 padding-left: 50px;
             }
-            @include mmd{
+            @include mmd {
                 padding-left: 0px;
             }
         }
     }
-
-    &-content{
+    &-content {
         padding-left: 104px;
-        @include lg{
+        @include lg {
             padding-left: 50px;
         }
-        @include mmd{
+        @include mmd {
             padding-left: 0px;
         }
-        .single-item{
+        .single-item {
             padding-bottom: 35px;
-            p{
+            p {
                 @include font-22;
                 font-family: $font-1;
                 color: $_404652;
                 max-width: 416px;
                 font-weight: 400;
                 line-height: 21.6px;
-                @include mmd{
+                @include mmd {
                     margin-inline: auto;
                 }
             }
-
+        }
+    }
+    &-video {
+        --padding-y: 150px;
+        &::before,
+        &::after {
+            content: "";
+            width: 370px;
+            height: 500px;
+            border-radius: 100%;
+            position: absolute;
+            background-color: #E5CF63;
+            transform: rotate(32deg);
+            filter: blur(300px);
+        }
+        &::before {
+            bottom: -150px;
+            left: -50px;
+        }
+        &::after {
+            top: 25%;
+            right: -75px;
+        }
+        &-inner {
+            position: relative;
+            z-index: 1;
+            padding-bottom: 50%;
+            border-radius: 20px;
+            overflow: hidden;
+            border: 5px solid #111622;
+            &>div {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        }
+        &-icon {
+            --width: 102px;
+            width: var(--width);
+            height: var(--width);
+            @include transition;
+            @include sm {
+                --width: 80px;
+            }
+            &:hover {
+                background-color: $primary !important;
+            }
         }
     }
 }
