--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -76,22 +76,22 @@ input[type=number] {
 }
 
 .common {
-    &-svg {
-        display: inline-block;
-        height: 1em;
-        overflow: visible;
-        vertical-align: -0.125em;
-    }
-    &-row {
-        --bs-gutter-x: 32px;
-        margin-bottom: calc(var(--bs-gutter-x) * -1);
-        @include mmd {
-            --bs-gutter-x: 24px;
-        }
-        &>div {
-            margin-bottom: var(--bs-gutter-x);
-        }
-    }
+    // &-svg {
+    //     display: inline-block;
+    //     height: 1em;
+    //     overflow: visible;
+    //     vertical-align: -0.125em;
+    // }
+    // &-row {
+    //     --bs-gutter-x: 32px;
+    //     margin-bottom: calc(var(--bs-gutter-x) * -1);
+    //     @include mmd {
+    //         --bs-gutter-x: 24px;
+    //     }
+    //     &>div {
+    //         margin-bottom: var(--bs-gutter-x);
+    //     }
+    // }
     &-padding {
         --padding-y: 120px;
         --padding-x: 0;
@@ -108,15 +108,9 @@ input[type=number] {
         @include sm {
             --padding-y: 60px;
         }
-        &-top {
-            padding-top: var(--padding-y);
-        }
     }
     &-title {
         margin-bottom: 60px;
-        @media (min-width: 1440px) {
-            padding: 0 4%;
-        }
         @include md {
             margin-bottom: 40px;
         }
@@ -124,11 +118,11 @@ input[type=number] {
             margin-bottom: 30px;
         }
         & h2 {
-            @include font-68;
+            @include font-42;
         }
-        & p {
-            @include font-20;
-        }
+        // & p {
+        //     @include font-20;
+        // }
     }
 }
 
@@ -166,4 +160,10 @@ input[type=number] {
 
 #root {
     overflow: hidden;
+}
+
+.container {
+    @media only screen and (min-width: 1500px) {
+        max-width: 1490px
+    }
 }
