roadmap and team

--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -66,7 +66,7 @@
         }
     }
     &-video {
-        --padding-y: 150px;
+        background-color: #FFFAEF;
         &::before,
         &::after {
             content: "";
