--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -93,13 +93,13 @@ input[type=number] {
     //     }
     // }
     &-padding {
-        --padding-y: 120px;
+        --padding-y: 150px;
         --padding-x: 0;
         padding: var(--padding-y) var(--padding-x);
-        @include xl {
-            --padding-y: 100px;
-        }
         @include lg {
+            --padding-y: 120px;
+        }
+        @include md {
             --padding-y: 100px;
         }
         @include md {
