--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,7 +6,8 @@
 @import '../scss/component';
 @import '../scss/header';
 @import '../scss/banner';
-@import '../scss/banner';
 @import '../scss/about';
 @import '../scss/tokenomics';
+@import '../scss/roadmap';
+@import '../scss/team';
 @import '../scss/footer';
