--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -18,7 +18,8 @@
     overflow: hidden;
     & img {
         width: 100%;
-        height: 100%;
+        min-height: 100%;
+        height: auto;
         object-fit: $property;
         position: absolute;
         top: 0;
@@ -121,20 +122,20 @@
     }
 }
 
-@mixin font-64 {
-    font-size: 64px;
+@mixin font-62 {
+    font-size: 62px;
     line-height: 120%;
     @include xl {
-        font-size: 52px;
+        font-size: 50px;
     }
     @include lg {
-        font-size: 42px;
+        font-size: 40px;
     }
     @include md {
-        font-size: 35px;
+        font-size: 34px;
     }
     @include sm {
-        font-size: 24px;
+        font-size: 30px;
     }
 }
 
@@ -157,7 +158,7 @@
 
 @mixin font-42 {
     font-size: 42px;
-    line-height: calc(62px/42px);
+    line-height: 140%;
     @include xl {
         font-size: 32px;
     }
