--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,4 +10,5 @@
 @import '../scss/tokenomics';
 @import '../scss/roadmap';
 @import '../scss/team';
+@import '../scss/faq';
 @import '../scss/footer';
