--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -1,7 +1,17 @@
 .banner {
     padding-top: var(--padding-top, 220px);
     padding-bottom: var(--padding-bottom, 170px);
-    background: linear-gradient(255deg, rgba(13, 20, 32, 0.20) 61.79%, #0D1420 98.15%);
+    background: linear-gradient(255deg, rgba(13, 20, 32, var(--opacity, 0.20)) 61.79%, #0D1420 98.15%);
+    @include md {
+        --padding-top: 150px;
+        --padding-bottom: 120px;
+        --opacity: .5;
+    }
+    @include sm {
+        --padding-top: 120px;
+        --padding-bottom: 80px;
+        --opacity: .5;
+    }
     &-img {
         padding-bottom: calc(62% - 14px);
         @media (min-width: 2300px) {
@@ -9,16 +19,40 @@
         }
     }
     &-content {
+        @include md {
+            padding: 0 10%;
+        }
         & h1 {
             font-size: 80px;
             line-height: 120%;
             margin-bottom: 30px;
+            @include lg {
+                font-size: 58px;
+            }
+            @include md {
+                font-size: 48px;
+            }
+            @include sm {
+                font-size: 38px;
+            }
         }
         & p {
             font-size: 32px;
             line-height: 140%;
+            @include lg {
+                font-size: 24px;
+            }
+            @include md {
+                font-size: 22px;
+            }
+            @include sm {
+                font-size: 18px;
+            }
         }
         & .btn {
+            --bs-btn-padding-y: 14px;
+            --bs-btn-padding-x: 20px;
+            gap: 10px;
             & span {
                 --width: 32px;
                 width: var(--width);
@@ -29,18 +63,39 @@
         }
     }
     &-wrap {
-        padding-left: 8%;
+        @include xxl {
+            padding-left: 8%;
+        }
+        @include xxxl {
+            padding-left: 8%;
+        }
+        @include lg {
+            width: 80%;
+            margin: auto;
+        }
     }
     &-inner {
         padding: 30px;
         --bs-border-radius: 20px;
         background-color: rgba($color: #272D36, $alpha: .90);
         backdrop-filter: blur(10px);
+        @include md {
+            padding: 50px;
+        }
+        @include sm {
+            padding: 24px;
+        }
         & h4 {
             @include font-24;
+            @include lg {
+                font-size: 17px;
+            }
         }
         & h5 {
             @include font-20;
+            @include lg {
+                font-size: 16px;
+            }
         }
         & .total {
             &::before,
@@ -49,6 +104,12 @@
                 width: calc(28% - 16px);
                 height: 1px;
                 background-color: $white;
+                @include lg {
+                    width: calc(22% - 16px);
+                }
+                @include sm {
+                    width: calc(22% - 16px);
+                }
             }
         }
         & .btn {
@@ -58,6 +119,9 @@
         & .form-control {
             padding: 19px 24px;
             color: rgba($color: $white, $alpha: .65);
+            @include sm {
+                padding: 15px 20px;
+            }
         }
     }
     &-time {
@@ -66,15 +130,24 @@
         @include lg {
             gap: 24px;
         }
+        @include sm {
+            gap: 16px;
+        }
     }
     &-timer {
         --width: 70px;
         width: var(--width);
         height: var(--width);
+        @include sm {
+            --width: 64px;
+        }
         &-inner {
             --width: 56px;
             width: var(--width);
             height: var(--width);
+            @include sm {
+                --width: 54px;
+            }
             & strong {
                 @include font-20;
             }
@@ -90,18 +163,29 @@
         --bs-border-radius: 10px;
         padding: 14px 16px;
         cursor: pointer;
+        @include sm {
+            padding: 12px;
+        }
     }
 }
 
 .swiper {
+    height: 100%;
     &-pagination {
-        --swiper-pagination-top: calc(100% - 70px);
+        --swiper-pagination-top: calc(100% - var(--minus, 70px));
+        @include sm {
+            --minus: 50px;
+        }
         &-bullet {
             --swiper-pagination-bullet-width: 48px;
             --swiper-pagination-bullet-height: 10px;
             --swiper-pagination-bullet-border-radius: 106px;
             background-color: rgba(229, 207, 99, 0.50);
             opacity: 1;
+            @include mmd {
+                --swiper-pagination-bullet-width: 32px;
+                --swiper-pagination-bullet-height: 8px;
+            }
             &-active {
                 background-color: rgba(229, 207, 99, 1);
             }
