--- a/src/assets/scss/_faq.scss
+++ b/src/assets/scss/_faq.scss
@@ -12,6 +12,10 @@
         border-radius: 16px;
         padding: 30px;
         background: linear-gradient(97deg, #FFF2B4 1.44%, rgba(254, 243, 190, 0.20) 96.25%);
+        @include sm {
+            padding: 1rem;
+            border-radius: 10px;
+        }
         &::before {
             content: "";
             width: 370px;
