--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -23,17 +23,23 @@
     --bs-navbar-padding-y: 16px;
     &.position-fixed {
         animation: headerAnimation .5s linear;
+        background-color: rgba($color: $black, $alpha: .30);
     }
     &-menu {
         margin-left: 140px;
+        @include lg {
+            margin-left: 70px;
+        }
         @include mmd {
+            margin-left: 0;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100vh;
-            background-color: rgba($color: $white, $alpha: .90);
-            padding: 24px 16px;
+            background-color: rgba($color: $black, $alpha: .90);
+            padding: 24px;
+            backdrop-filter: blur(14px);
             transform: translateY(100%);
             @include transition;
             &.show-menu {
@@ -58,6 +64,10 @@
         cursor: pointer;
         @include lg {
             padding: 10px 12px;
+        }
+        @include mmd {
+            padding-left: 0;
+            padding-right: 0;
         }
         &:hover,
         &.active {
@@ -85,23 +95,28 @@
             color: $primary;
         }
     }
+    & .btn {
+        @include mmd {
+            --bs-btn-padding-y: 9px;
+            --bs-btn-padding-x: 20px;
+        }
+    }
     &-toggler {
-        --btn-padding-x: 4px;
-        --btn-padding-y: 5px;
-        padding: var(--btn-padding-y) var(--btn-padding-x);
+        --width: 40px;
+        width: var(--width);
+        height: var(--width);
+        padding: 0;
+        border-radius: 4px;
         border: none;
-        background-color: transparent;
-        color: $heading;
+        background-color: rgba($color: $black, $alpha: .1);
+        color: rgba($color: $white, $alpha: .80);
         display: flex;
         align-items: center;
         justify-content: center;
         & svg {
-            --width: 40px;
+            --width: 30px;
             width: var(--width);
             height: var(--width);
-            @include sm {
-                --width: 32px;
-            }
         }
     }
 }
