--- a/src/assets/scss/_roadmap.scss
+++ b/src/assets/scss/_roadmap.scss
@@ -6,6 +6,17 @@
     &-title {
         padding: 34px 15px;
         margin-bottom: -130px;
+        position: relative;
+        @include xl {
+            top: 24px;
+        }
+        @include lg {
+            margin-bottom: 60px;
+        }
+        @include mmd {
+            padding: 20px 30px;
+            margin-bottom: 50px;
+        }
         & h2 {
             color: $white;
         }
@@ -17,9 +28,40 @@
         background: rgba(202, 174, 106, 0.20);
         backdrop-filter: blur(10px);
     }
+    &-wrap {
+        @include lg {
+            margin-bottom: -30px;
+            &>div {
+                display: flex;
+                margin-bottom: 30px;
+                &>div {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+        @include mmd {
+            margin-bottom: -24px;
+            &>div {
+                display: flex;
+                margin-bottom: 24px;
+                &>div {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
     &-item {
+        @include xl {
+            min-height: 385px;
+            margin-top: 24px;
+        }
         &.py-big {
             min-height: 495px;
+            @include lg {
+                min-height: auto;
+            }
             @include mmd {
                 min-height: auto;
             }
