--- a/src/assets/scss/_tokenomics.scss
+++ b/src/assets/scss/_tokenomics.scss
@@ -16,10 +16,29 @@
         height: var(--width);
         background-color: #E5CF63;
         border-radius: 6px;
+        @include sm {
+            top: -13px;
+            --width: 24px;
+        }
     }
     & .shape {
         &-1 {
             bottom: 116px;
+            @include xxl {
+                bottom: 66px;
+            }
+            @include xl {
+                bottom: 26px;
+            }
+            & svg {
+                width: 700px;
+                @include xxl {
+                    width: 614px;
+                }
+                @include xl {
+                    width: 484px;
+                }
+            }
         }
         &-2 {
             & svg {
@@ -29,9 +48,17 @@
         }
     }
     &-wrapper {
-        position: relative;
         z-index: 1;
         padding: 136px 0px 136px 96px;
+        @include lg {
+            padding: 106px 0px 106px 56px
+        }
+        @include md {
+            padding: 50px;
+        }
+        @include sm {
+            padding: 3px;
+        }
         & .tokenContentBG img {
             position: absolute;
             left: 0;
@@ -56,23 +83,31 @@
             z-index: 1;
             padding-left: 64px;
             @include transition;
+            @include mmd {
+                padding-left: 48px;
+            }
             & .dot {
                 position: absolute;
                 top: 0;
                 left: 0;
                 z-index: 1;
-                width: 40px;
-                height: 40px;
                 background-color: #E16DDF;
                 border-radius: 100%;
-                width: 40px;
-                height: 40px;
+                --width: 40px;
+                width: var(--width);
+                height: var(--width);
+                @include mmd {
+                    --width: 30px;
+                }
                 svg {
                     position: absolute;
                     z-index: 2;
                     left: 50%;
                     top: 50%;
                     transform: translate(-50%, -50%);
+                    @include mmd {
+                        width: 16px;
+                    }
                 }
             }
             &:not(:last-child) {
@@ -87,6 +122,9 @@
                     font-weight: 700;
                     line-height: 130%;
                     font-family: $font-2;
+                    @include sm {
+                        font-size: 20px;
+                    }
                 }
             }
         }
@@ -103,15 +141,17 @@
         }
         @include lg {
             --width: 450px;
+            margin-right: 0;
         }
         @include mmd {
             padding: 0px;
             --width: 330px;
+            margin: 0;
         }
         @include sm {
             --width: 350px;
             padding: 0px;
-            margin-top: 24px;
+            margin-top: 30px !important;
         }
     }
     &-logo {
