--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,7 @@
 @import '../scss/component';
 @import '../scss/header';
 @import '../scss/banner';
+@import '../scss/brands';
 @import '../scss/about';
 @import '../scss/tokenomics';
 @import '../scss/roadmap';
